{
    "name": "ControlMovement",
    "maps": [
        {
            "name": "Touch",
            "id": "e4e17396-7341-46af-80c5-87bf4d135114",
            "actions": [
                {
                    "name": "TouchInput",
                    "type": "PassThrough",
                    "id": "317b3c05-f63c-4302-9db8-8ef143cc3af8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "3088e96f-af00-4696-83c7-7cc938d2fcd9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "dfe45f8a-705b-465e-8d00-c3a7a6beeb12",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "915019ec-74e9-4ee7-8a9c-a82035b36ec3",
                    "path": "<Touchscreen>/primaryTouch",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "24111a60-7650-41a2-8963-81eae2e706d0",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2c9c0ece-0ae1-40a7-ac57-bda886f4a271",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}